# credit-risk-intelligence-lab

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/processed/: X_test.csv  X_test_processed.csv  X_train.csv  X_train_processed.csv  credit_risk_anomaly_scores.csv  credit_risk_interpretability_output.csv  credit_risk_portfolio_report.csv  credit_risk_segments.csv  credit_risk_stress_results.csv  feature_dictionary.csv  german_credit_eda.csv  german_credit_features.csv  risk_cluster_assignments.csv  test_pd_predictions.csv  y_test.csv  y_train.csv
data/raw/: german_credit_raw.csv
models/: anomaly_detection_metadata.json  anomaly_score_scaler.pkl  baseline_logistic_pd_model.pkl  baseline_logistic_pd_model_metadata.json  kmeans_risk_segmentation_metadata.json  kmeans_risk_segmentation_model.pkl  model_interpretability_metadata.json  pca_anomaly_projection.pkl  portfolio_risk_reporting_metadata.json  preprocessor.pkl  stress_testing_metadata.json
notebooks/: 01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_probability_of_default_model.ipynb  04_unsupervised_risk_segmentation.ipynb  05_anomaly_detection.ipynb  06_model_interpretability.ipynb  07_portfolio_risk_reporting.ipynb  08_stress_testing.ipynb
reports/: credit_risk_portfolio_report.md  credit_risk_stress_testing_report.md
reports/tables/: 03_model_coefficients.csv  03_model_metrics.csv  03_risk_bands.csv  03_risk_deciles.csv  04_agglomerative_cluster_summary.csv  04_cluster_interpretation.csv  04_cluster_numerical_profile.csv  04_cluster_risk_summary.csv  04_cluster_selection_metrics.csv  05_anomaly_comparison.csv  05_anomaly_flag_summary.csv  05_cluster_anomaly_summary.csv  05_top_anomaly_review.csv  (+25 more)
