[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "credit-risk-intelligence-lab"
version = "0.1.0"
description = "Machine learning lab for credit risk analysis, probability of default modeling, borrower segmentation, anomaly detection, interpretability, and portfolio risk reporting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "André Moctezuma Guerra" }
]

keywords = [
    "credit-risk",
    "machine-learning",
    "probability-of-default",
    "risk-segmentation",
    "anomaly-detection",
    "stress-testing",
    "streamlit",
    "finance"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial"
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "ipykernel",
    "nbformat",
    "joblib",
    "streamlit",
    "tabulate"
]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff"
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 88
target-version = ["py311"]


[tool.isort]
profile = "black"
line_length = 88


[tool.ruff]
line-length = 88
target-version = "py311"